--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,7 @@ body {
     background-color: blueviolet;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
+
+h1 {
+    color: limegreen;
+}
